<resources>
    <string name="app_name">Family-Map-App</string>

    <!--Field names-->
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="userName">User Name:</string>
    <string name="password">Password:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>

    <!-- Button names -->
    <string name="maleRadio">Male</string>
    <string name="femaleRadio">Female</string>
    <string name="signInButton">Sign In</string>
    <string name="registerButton">Register</string>

    <!-- Toast texts -->
    <string name="loginFailToast">The login was unsuccessful.</string>
    <string name="registerFailToast">Registering was unsuccessful.</string>

    <!-- Map fragment default texts -->
    <string name="nameDefaultText">Welcome!</string>
    <string name="eventDefaultText">Click on a marker to see event details</string>

    <!-- Person activity texts -->
    <string name="personFirstNameText">First Name</string>
    <string name="personLastNameText">Last Name</string>
    <string name="personGenderText">Gender</string>
    <string name="personMale">Male</string>
    <string name="personFemale">Female</string>

    <!-- Menu titles -->
    <string name="searchMenuTitle">Search</string>
    <string name="settingsMenuTitle">Settings</string>

    <!-- Settings activity texts -->
    <string name="lifeStory">Life Story Lines</string>
    <string name="lifeStoryInfo">SHOW LIFE STORY LINES</string>
    <string name="familyTree">Family Tree Lines</string>
    <string name="familyTreeInfo">SHOW FAMILY TREE LINES</string>
    <string name="spouse">Spouse Lines</string>
    <string name="spouseInfo">SHOW SPOUSE LINES</string>
    <string name="fatherSide">Father\'s Side</string>
    <string name="fatherSideInfo">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="motherSide">Mother\'s Side</string>
    <string name="motherSideInfo">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="maleFilter">Male Events</string>
    <string name="femaleFilter">Female Events</string>
    <string name="genderInfo">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout">Logout</string>
    <string name="logoutInfo">RETURN TO LOGIN SCREEN</string>
</resources>